--- a/MedicalService/src/main/resources/application.properties
+++ b/MedicalService/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
 app.client.url=http://localhost:4200/*
 
+app.url.route.image="files//services//images"
