--- a/MedicalService/src/main/resources/application.properties
+++ b/MedicalService/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 app.client.url=http://localhost:4200/*
 
 app.url.route.image="files//services//images"
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=20213tn042@utez.edu.mx
+spring.mail.password=nxfvfvxdjviqtwzg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.timeout=10000
