Correccion de envio de correo(basico), eliminacion de tabla(doctors_comments), correccion de valicacion de DTOs

--- a/MedicalService/src/main/resources/application.properties
+++ b/MedicalService/src/main/resources/application.properties
@@ -14,10 +14,13 @@ app.client.url=http://localhost:4200/*
 app.url.route.image="files//services//images"
 
 
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=20213tn042@utez.edu.mx
-spring.mail.password=nxfvfvxdjviqtwzg
+spring.mail.password=gbvbkzdlqldwmvln
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.references=true
+spring.mail.properties.mail.smtp.timeout=2000
