filtro de incriptacion y desincriptacion

--- a/MedicalService/src/main/resources/application.properties
+++ b/MedicalService/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.references=true
 spring.mail.properties.mail.smtp.timeout=2000
+encryption.secret-key=FDG4FD98GF4SD984A8ERT7V6AR9T74G4
